# cedge

./: .env.example  README.md  docker-compose.yml  index_1.py
.git-rewrite/: backup-refs  commit  revs
.github/workflows/: codeql.yml
backend/: .dockerignore  Dockerfile  config.py  main.py  models.py  pyproject.toml  run.py  test.py
backend/src/prback/: .env.dev  config.py  extensions.py  main.py  models.py
backend/src/prback/guards/: .roleguard.py.kate-swp  jwtguard.py  roleguard.py
backend/src/prback/routes/: actempad.py  exls.py  genacc.py  myforms.py
frontend/: .dockerignore  Dockerfile  backup.sql  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  index.css  main.jsx
frontend/src/components/: logout.jsx  protectedroute.jsx
frontend/src/css/: dashlogsign.css  reviewer.css
frontend/src/pages/: RequesterPage.jsx  ReviewerPage.jsx  dashboard.jsx  login.jsx  signup.jsx  templates.jsx  toggle-theme.jsx
frontend/src/utils/: RoleBasedRoute.jsx  aclvalidation.js  api.js  auth.jsx  publicRoute.jsx
