[project]
name = "caproject-backend"
version = "0.1.0"
description = "Capstone backend"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-Migrate>=4.1.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0",
    "python-dotenv>=1.2.2",
    "pyjwt>=2.10.1",
    "pandas",
    "gunicorn==22.0.0",
]

[tool.setuptools]
py-modules = ["config", "main", "models"]
