[project]
name = "caproject-backend"
version = "0.1.0"
description = "Capstone backend"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-Migrate>=4.1.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0",
    "python-dotenv>=0.20.0",
    "pyjwt>=2.10.1",
    "pandas",
    "gunicorn==22.0.0",
    "flask-limiter>=3.5",
    "redis>=3.0",
    "requests>=2.34.2",
    "openpyxl>=3.1.5",
]

[tool.setuptools]
py-modules = ["config", "main", "models"]
